Updated .girignore with new marketplace assets.

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,12 @@ DerivedDataCache/*
 
 Content/StarterContent/*
 Content/AdvancedVillagePack/*
+Content/Environment_Set/*
+Content/FantasyVillage/*
+Content/Medieval_Castle_Vol1/*
+Content/MedievalDungeon/*
+Content/MultistoryDungeons/*
+Content/PhotoR_Backgrounds/*
 
 VSCode Files
 /.vscode/*
